fixed http crater link

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
         <p>
             <a href="about.html">about</a> &middot;
-            <a href="https://crater.drewnollsch.com">projects</a> &middot;
+            <a href="http://crater.drewnollsch.com">projects</a> &middot;
             <a href="https://read.cv/drewnollsch">cv</a> &middot;
             <a href="recipes.html">recipes</a>
         </p>
