--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
 
         <p>
             <a href="about.html">about</a> &middot;
-            <a href="http://crater.drewnollsch.com">projects</a> &middot;
-            <a href="https://read.cv/drewnollsch">cv</a> &middot;
+            <a href="http://crater.drewnollsch.com" target="_blank">projects</a> &middot;
+            <a href="https://read.cv/drewnollsch" target="_blank">cv</a> &middot;
             <a href="recipes.html">recipes</a>
         </p>
     </main>
