added projects page

--- a/public/about.html
+++ b/public/about.html
@@ -29,6 +29,9 @@
             <p>
                 I'm passionate about food, and some call me the condiment king. Here are some examples of <a href="recipes.html">recipes</a> that I've developed.
             </p>
+        </section>
+        
+        <section>
             <p>
                 <a href="https://github.com/drex04" target="_blank">github</a> &middot;
                 <a href="https://www.linkedin.com/in/drewnollsch/" target="_blank">linkedin</a> &middot;
