--- a/public/recipes.html
+++ b/public/recipes.html
@@ -30,7 +30,26 @@
                 blend lemon juice, tahini, dill, parsley, salt, pepper, mayonnaisse...maras biber?
             </p>
 
+            <h3>&#127790; carne asada</h3>
+            <p>
+                soy sauce, fish sauce, lime juice, chili powder, olive oi, cilantro...
+            </p>
+
         </section>
+
+        <section>
+            <h1>friends' &#9670; recipes</h2>
+            <p>visitors: please submit favorite recipes that you've invented or adapted!</p>
+            <p>~~insert submission form here~~</p>
+            <button>submit recipe</button>
+        </section>
+
+        <section>
+            <h3>Trav's &#9670; miso spaghetti </h2>
+            <p>miso, spaghetti, etc</p>
+        </section>
+
+
     </main>
 </body>
 
