added CSS from the Todo app tutorial

--- a/public/projects.html
+++ b/public/projects.html
@@ -24,7 +24,8 @@
             <p>Backend: Node.js, Express, MongoDB, PostgreSQL, Python</p>
             <p>Dev/Ops: Heroku, Google Cloud, Travis, Jest, Git, Github, VS Code</p>
             <p>Other: SAFe POPM, SAFe Arch, Jira, Confluence</p>
-
+            <!-- Could arrange them in a grid, with a button, "Details". On click, it moves the elements into a X-Y scatter plot. Y axis is Layer (front to devops) and X axis is skill level -->
+            
         </section>
     </main>
 </body>
