--- a/public/recipes.html
+++ b/public/recipes.html
@@ -38,17 +38,15 @@
         </section>
 
         <section>
-            <h1>friends' &#9670; recipes</h2>
-            <p>visitors: please submit favorite recipes that you've invented or adapted!</p>
-            <p>~~insert submission form here~~</p>
-            <button>submit recipe</button>
-        </section>
+            <h1>friends' &#9670; recipes</h1>
+            <p>visitors: please submit recipes that you've invented or adapted!</p>
+            <br>
+                  
+            <div id="root"></div>
+            <script src="recipe_script.js"></script>
 
-        <section>
-            <h3>Trav's &#9670; miso spaghetti </h2>
-            <p>miso, spaghetti, etc</p>
         </section>
-
+        
 
     </main>
 </body>
