updated projects page with favicon and text

--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <title>About Me</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="wave-favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="peace-favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <h2>Hi, I'm Drew Nollsch.</h2>
 
             <p>
-                I am a full stack engineer based in the Netherlands. I'm currently searching for work, either in the Netherlands or remotely in EU / UK time zones.
+                I am a software engineer based in the Netherlands. I'm currently searching for work, either in the Netherlands or remotely in EU / UK time zones.
             </p>
 
             <p>
