--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <h1>Hi, I'm <a href="mailto:drew.nollsch@gmail.com" target="_blank">Drew.</a></h1>
 
         <p>
-            I'm a full stack engineer based in the Netherlands. I am currently open for work.
+            I'm a software engineer based in the Netherlands. I am currently open for work.
         </p>
 
         <p>
