--- a/public/projects.html
+++ b/public/projects.html
@@ -4,9 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
-    <title>About Me</title>
+    <title>Projects</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="wave-favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="hammer-wrench-favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -15,16 +15,22 @@
             <h1><a href="index.html">drew's</a> &#9670; projects</h1>
             <h2>projects</h2>
             <p>
-                <a href="http://crater.drewnollsch.com" target="_blank">crater</a>
+                <a href="http://crater.drewnollsch.com" target="_blank">crater</a> &middot; <a href="https://github.com/drex04/crater-music-app" target="_blank">github</a> <br>
+                Crater is an app that scrapes DJ set tracklists from the web and uses the data to generate recommended playlists. Technologies used: HTML, CSS, JS, node.js, express.js, PostgreSQL, Python, BeautifulSoup
             </p>
+            <p>
+                <a href="recipes.html" target="_blank">recipes</a> &middot; <a href="https://github.com/drex04/personal-website" target="_blank">github</a><br>
+                This is a page where I can record recipes I've developed and where friends can submit and share recipes that they have created. Developed with Vanilla JavaScript & Node.js following the Model-View-Controller design pattern.
+            </p>
+        </section>
+
+        <section>
             <h2>skills</h2>
-            <p>~~insert icons of technologies here~~</p>
-            <p>Confident / Comfortable / Learning</p>
             <p>Frontend: HTML5, CSS3, JavaScript, React, Redux</p>
             <p>Backend: Node.js, Express, MongoDB, PostgreSQL, Python</p>
             <p>Dev/Ops: Heroku, Google Cloud, Travis, Jest, Git, Github, VS Code</p>
             <p>Other: SAFe POPM, SAFe Arch, Jira, Confluence</p>
-            <!-- Could arrange them in a grid, with a button, "Details". On click, it moves the elements into a X-Y scatter plot. Y axis is Layer (front to devops) and X axis is skill level -->
+            <!-- Could arrange them in a grid, with a button, "Details". On click, it moves the elements into a X-Y scatter plot. Y axis is Layer (front to devops) and X axis is skill level (Confident, Comfortable, Learning) -->
             
         </section>
     </main>
