--- a/public/projects.html
+++ b/public/projects.html
@@ -16,20 +16,22 @@
             <h2>projects</h2>
             <p>
                 <a href="http://crater.drewnollsch.com" target="_blank">crater</a> &middot; <a href="https://github.com/drex04/crater-music-app" target="_blank">github</a> <br>
-                Crater is an app that scrapes DJ set tracklists from the web and uses the data to generate recommended playlists. Technologies used: HTML, CSS, JS, node.js, express.js, PostgreSQL, Python, BeautifulSoup
+                Crater is an app that scrapes DJ set tracklists from the web and uses the data to generate recommended playlists. Developed with: HTML, CSS, JS, node.js, express.js, PostgreSQL, Python, BeautifulSoup, and Heroku.
             </p>
             <p>
                 <a href="recipes.html" target="_blank">recipes</a> &middot; <a href="https://github.com/drex04/personal-website" target="_blank">github</a><br>
-                This is a page where I can record recipes I've developed and where friends can submit and share recipes that they have created. Developed with Vanilla JavaScript & Node.js following the Model-View-Controller design pattern.
+                This is a page where I can record recipes I've developed and where friends can submit and share recipes that they have created. Developed following the Model-View-Controller design pattern using: HTML, CSS, JS, node.js, express.js, MongoDB, and Heroku.
             </p>
         </section>
 
         <section>
             <h2>skills</h2>
-            <p>Frontend: HTML5, CSS3, JavaScript, React, Redux</p>
+            <p>Frontend: HTML5, CSS3, JavaScript</p>
             <p>Backend: Node.js, Express, MongoDB, PostgreSQL, Python</p>
-            <p>Dev/Ops: Heroku, Google Cloud, Travis, Jest, Git, Github, VS Code</p>
-            <p>Other: SAFe POPM, SAFe Arch, Jira, Confluence</p>
+            <p>Dev/Ops: Heroku, Git, Github, VS Code</p>
+            <p>Management: SAFe POPM, SAFe Arch, Jira, Confluence</p>
+            <p>Learning: React, Redux, AWS, Travis, Jest</p>
+
             <!-- Could arrange them in a grid, with a button, "Details". On click, it moves the elements into a X-Y scatter plot. Y axis is Layer (front to devops) and X axis is skill level (Confident, Comfortable, Learning) -->
             
         </section>
