--- a/public/about.html
+++ b/public/about.html
@@ -33,10 +33,11 @@
         
         <section>
             <p>
-                <a href="https://github.com/drex04" target="_blank">github</a> &middot;
-                <a href="https://www.linkedin.com/in/drewnollsch/" target="_blank">linkedin</a> &middot;
-                <a href="mailto:drew.nollsch@gmail.com" target="_blank">email</a> &middot;
-                <a href="tel:+31653740784">+31 653 740 784</a>
+                {% comment %} <a href="./Drew_Nollsch_2022.pdf" target="_blank">CV</a>
+                &middot; {% endcomment %}
+                <a href="https://github.com/drex04" target="_blank">Github</a> &middot;
+                <a href="https://www.linkedin.com/in/drewnollsch/" target="_blank">LinkedIn</a> &middot;
+                <a href="mailto:drew.nollsch@gmail.com" target="_blank">Email</a>
             </p>
         </section>
     </main>
