changing mongodb connection to Vercel serverless function

--- a/public/about.html
+++ b/public/about.html
@@ -33,8 +33,8 @@
         
         <section>
             <p>
-                {% comment %} <a href="./Drew_Nollsch_2022.pdf" target="_blank">CV</a>
-                &middot; {% endcomment %}
+                <a href="./Drew_Nollsch_2022.pdf" target="_blank">CV</a>
+                &middot;
                 <a href="https://github.com/drex04" target="_blank">Github</a> &middot;
                 <a href="https://www.linkedin.com/in/drewnollsch/" target="_blank">LinkedIn</a> &middot;
                 <a href="mailto:drew.nollsch@gmail.com" target="_blank">Email</a>
