--- a/public/about.html
+++ b/public/about.html
@@ -21,24 +21,19 @@
             </p>
 
             <p>
-                Interested in: history, prehistory, archaeology, ancient DNA, and traditional crafts (e.g. food
-                preservation, fishing,
-                music, pottery, woodcraft).
+                Interested in: history, prehistory, archaeology, ancient DNA, and traditional crafts (e.g. food preservation, fishing, music, pottery, woodcraft).
             </p>
 
             <p>
                 I'm passionate about food, and some call me the condiment king. Here are some examples of <a href="recipes.html">recipes</a> that I've developed.
             </p>
-        </section>
-        
-        <section>
-            <p>
-                {% comment %} <a href="./Drew_Nollsch_2022.pdf" target="_blank">CV</a>
-                &middot; {% endcomment %}
-                <a href="https://github.com/drex04" target="_blank">Github</a> &middot;
-                <a href="https://www.linkedin.com/in/drewnollsch/" target="_blank">LinkedIn</a> &middot;
+
+            <div class='about-links'>
+                <a href="./Nollsch_CV.pdf" target="_blank">CV</a>
+                <a href="https://github.com/drex04" target="_blank">GitHub</a> 
+                <a href="https://www.linkedin.com/in/drewnollsch/" target="_blank">LinkedIn</a>
                 <a href="mailto:drew.nollsch@gmail.com" target="_blank">Email</a>
-            </p>
+            </div>
         </section>
     </main>
 </body>
