--- a/public/projects.html
+++ b/public/projects.html
@@ -13,28 +13,30 @@
     <main>
         <section>
             <h1><a href="index.html">drew's</a> &#9670; projects</h1>
-            <h2>projects</h2>
             <p>
-                <a href="https://crater-frontend.herokuapp.com/" target="_blank">crater homepage</a> &middot; <a href="https://github.com/drex04/crater-frontend" target="_blank">frontend</a> &middot; <a href="https://github.com/drex04/crater-web-app" target="_blank">backend</a> &middot; <a href="https://github.com/drex04/crater-scraper" target="_blank">web scraper</a><br>
-                Crater is an app that scrapes DJ set tracklists from the web and allows users to browse tracklist data to discover new music.
-                Web app built with React, Python, Django, Gunicorn, AWS RDS PostgreSQL and Heroku PaaS.
-                Scraper built with Node.js, Cheerio, Python, Beautiful Soup, and PostgreSQL.
+                <a href="https://crater.drewnollsch.com/" target="_blank">Crater Homepage</a> &middot; <a href="https://github.com/drex04/crater-frontend" target="_blank">GitHub (Front End)</a> &middot; <a href="https://github.com/crater-fm/crater-web-app" target="_blank">GitHub (API)</a> &middot;
+                <p>Crater is a single-page application that lets users browse through DJ tracklist data aggregated from internet radio stations. Responsive React front-end using React-Router, Material-UI, and CSS-in-JS, deployed with Create-React-App on Vercel. Back-end REST API using Django-REST-Framework and PostgreSQL, deployed on AWS Elastic Beanstalk, secured with HTTPS.Sketched user flows and wireframes in Figma with a UX designer and managed work using a Kanban board and GitHub issues.
+                </p>
             </p>
             <p>
-                <a href="recipes.html" target="_blank">recipes</a> &middot; <a href="https://github.com/drex04/personal-website" target="_blank">github</a><br>
+                <a href="https://github.com/crater-fm/crater-scraper" target="_blank">Web Scraper GitHub</a>
+                <p>This web scraper populates the Crater database with an initial dataset scraped from the NTS Radio website. Node.js script using Axios and Cheerio.js for HTML parsing, scraping data into a PostgreSQL database hosted on AWS RDS. Recruited other project contributors and managed their work using GitHub issues and pull requests.</p>
+            </p>
+            <p>
+                <a href="recipes.html" target="_blank">Recipes Web App</a> &middot; <a href="https://github.com/drex04/personal-website" target="_blank">GitHub</a><br>
                 This is a page where I can record recipes I've developed and where friends can submit and share recipes that they have created. Developed following the Model-View-Controller design pattern using: HTML, CSS, JS, Node.js, Express.js, MongoDB, and Heroku.
+            </p>
+            <p>
+                <a href="https://github.com/drex04/cassini-trajectory" target="_blank">Cassini Mission Simulation GitHub</a>
+                <p>This MATLAB model simulates the NASA Cassini mission’s trajectory en route to Saturn and includes multiple plots to visualize orbital trajectory, which included gravity-assist flybys of Venus, Earth, and Jupiter.</p>
             </p>
         </section>
 
         <section>
-            <h2>skills</h2>
-            <p>Frontend: HTML5, CSS3, JavaScript, React</p>
-            <p>Backend: Node.js, Express.js, MongoDB, PostgreSQL, Python, Django, Gunicorn</p>
-            <p>Dev/Ops: Heroku, Git, Github, VS Code, AWS RDS</p>
-            <p>Management: SAFe POPM, SAFe Arch, Jira, Confluence</p>
-
-            <!-- Could arrange them in a grid, with a button, "Details". On click, it moves the elements into a X-Y scatter plot. Y axis is Layer (front to devops) and X axis is skill level (Confident, Comfortable, Learning) -->
-            
+            <h2>Technical Skills</h2>
+            <p><b>Languages and Frameworks:</b> JavaScript, React, Material-UI, HTML, CSS, Node.js, Express, Python, Django, SQL, PostgreSQL, MongoDB, MATLAB, HTTP, JSON, XML</p>
+            <p><b>Infrastructure and DevOps:</b> AWS (Elastic Beanstalk, RDS, Route 53), Google Cloud Platform (Compute Engine, App Engine, Apigee), Vercel, Heroku, Git, VS Code, Postman</p>
+            <p><b>Methodologies:</b> Agile (SAFe Certified), REST, Model-View-Controller (MVC), UML, TOGAF, ArchiMate, Requirement Analysis</p>
         </section>
     </main>
 </body>
