--- a/public/recipes.html
+++ b/public/recipes.html
@@ -10,95 +10,112 @@
 </head>
 
 <body>
-    <main>
-        <section>
-            <h1><a href="index.html">drew's</a> &#9670; recipes</h1>
-            </h1>
+    <h1><a href="index.html">drew's</a> &#9670; recipes</h1>
+    </h1>
+    <!-- Tab Links -->
+    <div class="tab">
+        <button class="tablinks" onclick="openSection(event, 'friend-recipes')" id="defaultOpen">Friends' Recipes</button>
+        <button class="tablinks" onclick="openSection(event, 'drew-recipes')">Drew's Recipes</button>
+    </div>
 
-            <h3 class="recipeHeader">&#129365; "romesco" roasted vegetable dip</h3>
-            <p class='ingredients'>
-                2 red/yellow/orange bell peppers<br>
-                2 large carrots<br>
-                1 large white onion<br>
-                1 tsp chili flakes<br>
-                1 can white beans (cannellini, Great Northern, etc.)<br>
-                1/3 cup + 2 tbsp extra-virgin olive oil<br>
-                2 tbsp red wine vinegar<br>
-            </p>
-            <p class="cookingMethod">
-                Preheat oven to 425F / 225C. Wash vegetables, peel carrots, and dice all vegetables into small pieces. Toss vegetables with chili flakes and 2 tbsp oil. Bake on a rimmed baking sheet until the vegetables are soft and the edges are beginning to turn a little bit brown. Blend roasted vegetables, white beans, vinegar, and remaining olive oil until smooth and creamy. Salt to taste (it may take quite a bit!).
-            </p>
+    <!-- Tab Content -->
+    <div id="friend-recipes" class="tabcontent">
+        <h1>friends' &#9670; recipes</h1>
+        <p>Visitors: please submit recipes that you've invented or adapted!</p>
+        <div id="root"></div>
+        <script src="recipe_script.js"></script>
+    </div>
 
-            <h3 class="recipeHeader">&#129382; asian broccoli quick pickles</h3>
-            <p class='ingredients'>
-                1 head broccoli, chopped<br>
-                4 garlic cloves, peeled and crushed<br>
-                1 onion, sliced thinly<br>
-                3 tbsp gochugaru (Korean red chili flakes)<br>
-                2 cups rice vinegar<br>
-                2 cups water<br>
-                2 tbsp salt<br>
-                1 tbsp sugar<br>
-                1 tbsp sesame oil
-            </p>
-            <p class='cookingMethod'>
-                Add the chopped broccoli, garlic, onion, and gochugaru (chili flakes) to a jar. Mix the vinegar, water, salt, and sugar in a pot and bring to a boil. Stir to dissolve the salt and sugar. Pour the hot brine into the jar, ensuring that all the vegetables are submerged beneath the liquid. Prepare and add more brine if necessary to submerge the vegetables. Pour 1 tbsp sesame oil on top of the brine, and seal the jar. Store in the fridge for at least three days to allow the flavors to develop. Store refrigerated. Consume within 2 weeks.
-            </p>
+    <div id="drew-recipes" class="tabcontent">
+        <h1>drew's &#9670; recipes</h1>
+        <p>Shared below are a few recipes that I've invented or developed!</p>
+        <h2 class="recipeHeader">&#129365; "Romesco" Roasted Vegetable Dip</h2>
+        <p class='ingredients'>
+        2 red/yellow/orange bell peppers<br>
+        2 large carrots<br>
+        1 large white onion<br>
+        1 tsp chili flakes<br>
+        1 can white beans (cannellini, Great Northern, etc.)<br>
+        1/3 cup + 2 tbsp extra-virgin olive oil<br>
+        2 tbsp red wine vinegar<br>
+        </p>
+        <p class="cookingMethod">
+        Preheat oven to 425F / 225C. Wash vegetables, peel carrots, and dice all vegetables into small pieces. Toss vegetables with chili flakes and 2 tbsp oil. Bake on a rimmed baking sheet until the vegetables are soft and the edges are beginning to turn a little bit brown. Blend roasted vegetables, white beans, vinegar, and remaining olive oil until smooth and creamy. Salt to taste (it may take quite a bit!).
+        </p>
 
-            <h3 class="recipeHeader">&#129425; chorizo-stuffed grilled squid</h3>
-            <p class='ingredients'>
-                8 squid bodies with tentacles<br>
-                8 bamboo skewers<br>
-                2 tbsp vegetable oil<br>
-                <br>
-                Dry rub:<br>
-                1/2 tsp kosher salt<br>
-                1/2 tsp ground fennel<br>
-                1/4 tsp ground coriander<br>
-                1/4 tsp chili powder<br>
-                1/4 tsp black pepper<br>
-                1/4 tsp cayenne pepper<br>
-                <br>
-                Filling:<br>
-                2 slices sourdough bread<br>
-                1/2 cup milk<br>
-                2 shallots<br>
-                1 zucchini<br>
-                1/2 cup spanish (dried) chorizo, finely chopped<br>
-                1/2 cup sauerkraut<br>
-                1/2 tsp ground fennel
-                1/4 tsp chili flakes
+        <h2 class="recipeHeader">&#129382; Asian Broccoli Quick Pickles</h2>
+        <p class='ingredients'>
+            1 head broccoli, chopped<br>
+            4 garlic cloves, peeled and crushed<br>
+            1 onion, sliced thinly<br>
+            3 tbsp gochugaru (Korean red chili flakes)<br>
+            2 cups rice vinegar<br>
+            2 cups water<br>
+            2 tbsp salt<br>
+            1 tbsp sugar<br>
+            1 tbsp sesame oil
+        </p>
+        <p class='cookingMethod'>
+            Add the chopped broccoli, garlic, onion, and gochugaru (chili flakes) to a jar. Mix the vinegar, water, salt, and sugar in a pot and bring to a boil. Stir to dissolve the salt and sugar. Pour the hot brine into the jar, ensuring that all the vegetables are submerged beneath the liquid. Prepare and add more brine if necessary to submerge the vegetables. Pour 1 tbsp sesame oil on top of the brine, and seal the jar. Store in the fridge for at least three days to allow the flavors to develop. Store refrigerated. Consume within 2 weeks.
+        </p>
 
-            </p>
-            <p class='cookingMethod'>
-                Prep:<br>
-                Pat squid bodies dry with paper towels, then coat with the dry rub spice mix. Soak the sourdough breadcrumbs in milk. Finely mince shallot, zucchini, chorizo, and sauerkraut. Finely chop the squid tentacles.<br>
-                <br>
-                Cook the filling:<br>
-                Sauté vegetables, chorizo, and chopped squid tentacles in a pan until cooked. Add 1/2 tsp ground fennel and 1/4 tsp chili flakes and stir until aromatic, about 30 seconds. Drain liquid from breadcrumbs and add to pan. Stir to combine and evaporate most of the liquid.<br>
-                <br>
-                Grill:<br>
-                Stuff the squid bodies with filling to about 2/3 full. Seal the tops of the squid bodies by piercing with a skewer. Brush the stuffed squids liberally with vegetable oil so that they won't stick to the grill. Grill briefly at high heat, turning occasionally to sear all sides, approximately 3 minutes.
-            </p>
+        <h2 class="recipeHeader">&#129425; Chorizo-Stuffed Grilled Squid</h2>
+        <p class='ingredients'>
+            8 squid bodies with tentacles<br>
+            8 bamboo skewers<br>
+            2 tbsp vegetable oil<br>
+            <br>
+            Dry rub:<br>
+            1/2 tsp kosher salt<br>
+            1/2 tsp ground fennel<br>
+            1/4 tsp ground coriander<br>
+            1/4 tsp chili powder<br>
+            1/4 tsp black pepper<br>
+            1/4 tsp cayenne pepper<br>
+            <br>
+            Filling:<br>
+            2 slices sourdough bread<br>
+            1/2 cup milk<br>
+            2 shallots<br>
+            1 zucchini<br>
+            1/2 cup spanish (dried) chorizo, finely chopped<br>
+            1/2 cup sauerkraut<br>
+            1/2 tsp ground fennel
+            1/4 tsp chili flakes
 
-            <h3 class="recipeHeader">&#127790; carne asada marinade</h3>
-            <p>
-                Olive oil, lime juice, cilantro, garlic, ground cumin, mexican oregano, chili powder, fish sauce, soy sauce, salt, black pepper
-            </p>
+        </p>
+        <p class='cookingMethod'>
+            Prep:<br>
+            Pat squid bodies dry with paper towels, then coat with the dry rub spice mix. Soak the sourdough breadcrumbs in milk. Finely mince shallot, zucchini, chorizo, and sauerkraut. Finely chop the squid tentacles.<br>
+            <br>
+            Cook the filling:<br>
+            Sauté vegetables, chorizo, and chopped squid tentacles in a pan until cooked. Add 1/2 tsp ground fennel and 1/4 tsp chili flakes and stir until aromatic, about 30 seconds. Drain liquid from breadcrumbs and add to pan. Stir to combine and evaporate most of the liquid.<br>
+            <br>
+            Grill:<br>
+            Stuff the squid bodies with filling to about 2/3 full. Seal the tops of the squid bodies by piercing with a skewer. Brush the stuffed squids liberally with vegetable oil so that they won't stick to the grill. Grill briefly at high heat, turning occasionally to sear all sides, approximately 3 minutes.
+        </p>
 
-        </section>
-
-        <section>
-            <h1>friends' &#9670; recipes</h1>
-            <p>visitors: please submit recipes that you've invented or adapted!</p>
-            <br>   
-            <div id="root"></div>
-            <script src="recipe_script.js"></script>
-
-        </section>
-        
-
-    </main>
+        <h2 class="recipeHeader">&#127790; Carne Asada Marinade</h2>
+        <p>
+            Olive oil, lime juice, cilantro, garlic, ground cumin, mexican oregano, chili powder, fish sauce, soy sauce, salt, black pepper
+        </p>
+    </div>
+    <script>
+function openSection(evt, sectionName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(sectionName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+    </script>
 </body>
-
 </html>
